--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ pip install -e .
     <span class=n>cflearn</span><span class=o>.</span><span class=n>estimate</span><span class=p>(</span>
         <span class=n>x_cv</span><span class=p>,</span>
         <span class=n>y_cv</span><span class=p>,</span>
-        <span class=n>wrappers</span><span class=o>=</span><span class=n>fcnn</span><span class=p>,</span>
+        <span class=n>pipelines</span><span class=o>=</span><span class=n>fcnn</span><span class=p>,</span>
         <span class=n>other_patterns</span><span class=o>=</span><span class=p>{</span><span class=s2>&quot;auto&quot;</span><span class=p>:</span> <span class=n>auto</span><span class=o>.</span><span class=n>pattern</span><span class=p>},</span>
     <span class=p>)</span>
 </code></pre></div> <p>Then you will see something like this:</p> <div class=highlight><pre><span></span><code>================================================================================================================================
@@ -57,7 +57,7 @@ pip install -e .
 <span class=c1># Make probability predictions</span>
 <span class=n>m</span><span class=o>.</span><span class=n>predict_prob</span><span class=p>(</span><span class=n>x</span><span class=p>)</span>
 <span class=c1># Estimate performance</span>
-<span class=n>cflearn</span><span class=o>.</span><span class=n>estimate</span><span class=p>(</span><span class=n>x</span><span class=p>,</span> <span class=n>y</span><span class=p>,</span> <span class=n>wrappers</span><span class=o>=</span><span class=n>m</span><span class=p>)</span>
+<span class=n>cflearn</span><span class=o>.</span><span class=n>estimate</span><span class=p>(</span><span class=n>x</span><span class=p>,</span> <span class=n>y</span><span class=p>,</span> <span class=n>pipelines</span><span class=o>=</span><span class=n>m</span><span class=p>)</span>
 </code></pre></div> <p>Then you will see something like this:</p> <div class=highlight><pre><span></span><code>================================================================================================================================
 |        metrics         |                       acc                        |                       auc                        |
 --------------------------------------------------------------------------------------------------------------------------------
@@ -68,13 +68,13 @@ pip install -e .
 </code></pre></div> <p>It is also worth mentioning that <code>carefree-learn</code> models can be saved easily, into a zip file!</p> <p>For example, a <code>cflearn^_^fcnn.zip</code> file will be created with one line of code:</p> <div class=highlight><pre><span></span><code><span class=n>cflearn</span><span class=o>.</span><span class=n>save</span><span class=p>(</span><span class=n>m</span><span class=p>)</span>
 </code></pre></div> <p>Of course, loading <code>carefree-learn</code> models are easy too!</p> <div class=highlight><pre><span></span><code><span class=n>m</span> <span class=o>=</span> <span class=n>cflearn</span><span class=o>.</span><span class=n>load</span><span class=p>()</span>
 <span class=c1># You will see exactly the same result as above!</span>
-<span class=n>cflearn</span><span class=o>.</span><span class=n>estimate</span><span class=p>(</span><span class=n>x</span><span class=p>,</span> <span class=n>y</span><span class=p>,</span> <span class=n>wrappers</span><span class=o>=</span><span class=n>m</span><span class=p>)</span>
+<span class=n>cflearn</span><span class=o>.</span><span class=n>estimate</span><span class=p>(</span><span class=n>x</span><span class=p>,</span> <span class=n>y</span><span class=p>,</span> <span class=n>pipelines</span><span class=o>=</span><span class=n>m</span><span class=p>)</span>
 </code></pre></div> <p><code>carefree-learn</code> can also easily fit / predict / estimate directly on files (file-in, file-out). Suppose we have an 'xor.txt' file with following contents:</p> <div class=highlight><pre><span></span><code>0,0,0
 0,1,1
 1,0,1
 1,1,0
 </code></pre></div> <p>Then <code>carefree-learn</code> can be utilized with only one line of code:</p> <blockquote> <p><code>delim</code> refers to 'delimiter', and <code>skip_first</code> refers to whether skipping the first line or not.</p> <p>Please refer to <a href=https://github.com/carefree0910/carefree-data/blob/dev/README.md>carefree-data</a> if you're interested in more details.</p> </blockquote> <div class=highlight><pre><span></span><code><span class=n>m</span> <span class=o>=</span> <span class=n>cflearn</span><span class=o>.</span><span class=n>make</span><span class=p>(</span><span class=n>delim</span><span class=o>=</span><span class=s2>&quot;,&quot;</span><span class=p>,</span> <span class=n>skip_first</span><span class=o>=</span><span class=kc>False</span><span class=p>)</span><span class=o>.</span><span class=n>fit</span><span class=p>(</span><span class=s2>&quot;xor.txt&quot;</span><span class=p>,</span> <span class=n>x_cv</span><span class=o>=</span><span class=s2>&quot;xor.txt&quot;</span><span class=p>)</span>
-<span class=n>cflearn</span><span class=o>.</span><span class=n>estimate</span><span class=p>(</span><span class=s2>&quot;xor.txt&quot;</span><span class=p>,</span> <span class=n>wrappers</span><span class=o>=</span><span class=n>m</span><span class=p>)</span>
+<span class=n>cflearn</span><span class=o>.</span><span class=n>estimate</span><span class=p>(</span><span class=s2>&quot;xor.txt&quot;</span><span class=p>,</span> <span class=n>pipelines</span><span class=o>=</span><span class=n>m</span><span class=p>)</span>
 </code></pre></div> <p>After which you will see something like this:</p> <div class=highlight><pre><span></span><code>================================================================================================================================
 |        metrics         |                       acc                        |                       auc                        |
 --------------------------------------------------------------------------------------------------------------------------------
@@ -120,7 +120,7 @@ pip install -e .
     <span class=p>)</span>
     <span class=c1># We can further train our model with the best hyper-parameters we&#39;ve obtained:</span>
     <span class=n>m</span> <span class=o>=</span> <span class=n>cflearn</span><span class=o>.</span><span class=n>make</span><span class=p>(</span><span class=o>**</span><span class=n>hpo</span><span class=o>.</span><span class=n>best_param</span><span class=p>)</span><span class=o>.</span><span class=n>fit</span><span class=p>(</span><span class=n>x</span><span class=p>,</span> <span class=n>y</span><span class=p>)</span>
-    <span class=n>cflearn</span><span class=o>.</span><span class=n>estimate</span><span class=p>(</span><span class=n>x</span><span class=p>,</span> <span class=n>y</span><span class=p>,</span> <span class=n>wrappers</span><span class=o>=</span><span class=n>m</span><span class=p>)</span>
+    <span class=n>cflearn</span><span class=o>.</span><span class=n>estimate</span><span class=p>(</span><span class=n>x</span><span class=p>,</span> <span class=n>y</span><span class=p>,</span> <span class=n>pipelines</span><span class=o>=</span><span class=n>m</span><span class=p>)</span>
 </code></pre></div> <p>Then you will see something like this:</p> <div class=highlight><pre><span></span><code>~~~  [ info ] Results
 ================================================================================================================================
 |        metrics         |                       acc                        |                       auc                        |
